[package]
name = "rust_http_benchmarks"
version = "0.1.0"
authors = ["hatoo <hato2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
anyhow = "1"
hyper = "0.13"
